--- a/goodbye.html
+++ b/goodbye.html
@@ -5,4 +5,5 @@
   <li> English: Goodbye, friends! </li>
   <li> Spanish:  Adios, amigos! </li>
   <li> Hawaiian: Mahalo </li>
+  <li> Tyler: Later dudes </li>
 </ul>
